[package]
name = "rust_multithread"
author = "Alexander Öberg <stativetroller7@gmail.com>"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
cached = "0.26.2"


[dev-dependencies]
criterion = "0.3.5"
gnuplot = "0.0.37"

[[bench]]
name = "main_benchmark"
harness = false