[workspace]

[package]
name = "rust_experiments"
authors = ["Alexander Öberg <stativetroller7@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"


[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "main_benchmark"
harness = false