[package]
name = "rust_experiments"
authors = ["Alexander Öberg <stativetroller7@gmail.com>"]
version = "0.1.0"
edition = "2021"
publish = false
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_experiments_lib"
path = "src/lib.rs"

[[bin]]
name = "rust_experiments"
path = "src/main.rs"

[dependencies]
rayon = "1.5.1"
zstd = "0.9.0"

[dev-dependencies]
criterion = "0.3.5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
zstd = "0.9.0"
toml = "0.5.8"
serde = { version = "1.0.131", features = ["derive"] }
chrono = "0.4.19"

[[bench]]
name = "benchmark"
harness = false